errors_final_30.txt
    Blocking waiting for file lock on build directory
warning: twister@0.5.0: warning: Exported component 'HapticTestButton' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> C:\Users\pixel\Downloads\twister\ui\applets\ps5_deck.slint:18:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 18 | export component HapticTestButton {
warning: twister@0.5.0:    |                  ^^^^^^^^^^^^^^^^
warning: twister@0.5.0:    |
warning: twister@0.5.0: warning: Exported component 'RingMeter' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> C:\Users\pixel\Downloads\twister\ui\applets\ps5_deck.slint:81:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 81 | export component RingMeter {
warning: twister@0.5.0:    |                  ^^^^^^^^^
warning: twister@0.5.0: warning: Exported component 'ValueBar' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> C:\Users\pixel\Downloads\twister\ui\applets\ps5_deck.slint:47:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 47 | export component ValueBar {
warning: twister@0.5.0:    |                  ^^^^^^^^
    Checking twister v0.5.0 (C:\Users\pixel\Downloads\twister)
error[E0433]: cannot find module or crate `twister` in this scope
 --> src\ai\copilot_interface.rs:2:5
  |
2 | use twister::gpu_shared::GpuShared;
  |     ^^^^^^^ use of unresolved module or unlinked crate `twister`
  |
  = help: if you wanted to use a crate named `twister`, use `cargo add twister` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `twister` in this scope
 --> src\ai\copilot_interface.rs:3:5
  |
3 | use twister::knowledge_graph::KnowledgeGraphClient;
  |     ^^^^^^^ use of unresolved module or unlinked crate `twister`
  |
  = help: if you wanted to use a crate named `twister`, use `cargo add twister` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `twister` in this scope
 --> src\ai\query_tools.rs:3:5
  |
3 | use twister::knowledge_graph::KnowledgeGraphClient;
  |     ^^^^^^^ use of unresolved module or unlinked crate `twister`
  |
  = help: if you wanted to use a crate named `twister`, use `cargo add twister` to add it to your `Cargo.toml`

warning: unused imports: `HardwareLayer` and `ProductType`
 --> src\forensic.rs:1:40
  |
1 | use crate::detection::{DetectionEvent, HardwareLayer, ProductType};
  |                                        ^^^^^^^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `burn::backend::Wgpu`
 --> src\forensic.rs:2:5
  |
2 | use burn::backend::Wgpu;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `burn::prelude::*`
 --> src\forensic.rs:3:5
  |
3 | use burn::prelude::*;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> src\forensic.rs:6:17
  |
6 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `wgpu::util::DeviceExt`
 --> src\particle_system\renderer.rs:2:5
  |
2 | use wgpu::util::DeviceExt;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `wgpu::util::DeviceExt`
 --> src\particle_system\frustum_culler.rs:2:5
  |
2 | use wgpu::util::DeviceExt;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `SystemTime` and `UNIX_EPOCH`
 --> src\particle_system\streaming.rs:2:17
  |
2 | use std::time::{SystemTime, UNIX_EPOCH};
  |                 ^^^^^^^^^^  ^^^^^^^^^^

warning: unused import: `burn::backend::Wgpu`
 --> src\ml\wav2vec2_loader.rs:1:5
  |
1 | use burn::backend::Wgpu;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `SignalType`
 --> src\dispatch\audio_ingester.rs:1:86
  |
1 | use crate::dispatch::signal_ingester::{SignalIngester, SignalMetadata, SampleFormat, SignalType};
  |                                                                                      ^^^^^^^^^^

warning: unused import: `SignalType`
 --> src\dispatch\rf_ingester.rs:1:86
  |
1 | use crate::dispatch::signal_ingester::{SignalIngester, SignalMetadata, SampleFormat, SignalType};
  |                                                                                      ^^^^^^^^^^

warning: variable does not need to be mutable
  --> src\particle_system\streaming.rs:47:21
   |
47 |                 let mut pos = [
   |                     ----^^^
   |                     |
   |                     help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable `event_count` is assigned to, but never used
   --> src\forensic.rs:134:17
    |
134 |             let mut event_count: u64 = 0;
    |                 ^^^^^^^^^^^^^^^
    |
    = note: consider using `_event_count` instead
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `event_count` is never read
   --> src\forensic.rs:139:25
    |
139 |                         event_count += 1;
    |                         ^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `start_date`
   --> src\forensic.rs:260:9
    |
260 |         start_date: Option<&str>,
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_start_date`

warning: unused variable: `end_date`
   --> src\forensic.rs:261:9
    |
261 |         end_date: Option<&str>,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_end_date`

warning: unused variable: `duration`
  --> src\particle_system\streaming.rs:39:17
   |
39 |             let duration = end_ms.saturating_sub(start_ms) as f32;
   |                 ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_duration`

warning: unused variable: `time_factor`
  --> src\particle_system\streaming.rs:40:17
   |
40 |             let time_factor = (start_ms as f64 % 1000000.0) as f32 / 100000.0;
   |                 ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_time_factor`

For more information about this error, try `rustc --explain E0433`.
warning: `twister` (lib) generated 17 warnings
warning: twister@0.5.0: warning: Exported component 'HapticTestButton' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> C:\Users\pixel\Downloads\twister\ui\applets\ps5_deck.slint:18:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 18 | export component HapticTestButton {
warning: twister@0.5.0:    |                  ^^^^^^^^^^^^^^^^
warning: twister@0.5.0:    |
warning: twister@0.5.0: warning: Exported component 'RingMeter' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> C:\Users\pixel\Downloads\twister\ui\applets\ps5_deck.slint:81:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 81 | export component RingMeter {
warning: twister@0.5.0:    |                  ^^^^^^^^^
warning: twister@0.5.0: warning: Exported component 'ValueBar' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> C:\Users\pixel\Downloads\twister\ui\applets\ps5_deck.slint:47:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 47 | export component ValueBar {
warning: twister@0.5.0:    |                  ^^^^^^^^
error: could not compile `twister` (lib) due to 3 previous errors; 17 warnings emitted
